fixed overlap problem

--- a/Components/SideMenuBar/SideMenuBar.module.css
+++ b/Components/SideMenuBar/SideMenuBar.module.css
@@ -3,7 +3,7 @@
     height: 932px;
     position: absolute;
     background: rgba(66,66,66,0.8);
-    z-index: 1;
+    z-index: 2;
 }
 
 .sideMenubarContainer{
